[package]
name = "crdt-bench-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = "0.4.0"
loro-core = { path = "../loro/crates/loro-core" }

[[bench]]
name = "loro"
harness = false
