[package]
name = "crdt-bench-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = "0.4.0"
loro-internal = { path = "../loro/crates/loro-internal" }
arbitrary = { version = "1.2.0", features = ["derive"] }
enum-as-inner = "0.5.1"
flate2 = "1.0.25"
serde_json = "1.0.89"
yrs = "0.16.2"
automerge = "0.3.0"
diamond-types = "1.0.0"
arref = "0.1.0"
indicatif = "0.17.3"

[[bench]]
name = "automerge"
harness = false

[[bench]]
name = "loro"
harness = false

[[bench]]
name = "yrs"
harness = false

[[bench]]
name = "diamond-type"
harness = false
